# scoping-review-pipeline

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG_QUEUE_FIXES.md  COMMIT_MESSAGE.md  Dockerfile  INSTALLATION_SUCCESS.md  README.md  RELEASE_NOTES.md  demo_simple.py  demo_supervisor.py  demo_supervisor_reliable.py  docker-compose.yml  install_and_test.py  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt  run_integration_tests.bat  run_reliable_demo.bat  run_simple_demo.bat  run_supervisor_demo.bat  run_tests.bat  setup.py  test-search.ipynb
.github/workflows/: test.yml
config/: grafana_dashboard.json  queue_config.yaml
docs/: DEPLOYMENT.md  DEV_INSTALLATION_FIX2.md  FINAL_INSTALLATION_GUIDE.md  INSTALLATION_FIX.md  MASTER_GUIDE.md  QUICKSTART.md  README_TESTING.md  TESTING.md  TESTING_CHECKLIST.md  TESTING_PLAN.md  TESTING_SUMMARY.md  TESTING_VISUAL_SUMMARY.md  TROUBLESHOOTING.md  WINDOWS_INSTALLATION.md  index.md
docs/async_queue/: README.md
docs/cli/: README.md
docs/collab/: README.md
docs/config/: README.md
docs/core/: README.md
docs/dedup/: README.md
docs/enrich/: README.md
docs/extraction/: README.md
docs/io/: README.md
docs/living/: README.md
docs/meta/: README.md
docs/prisma/: README.md
docs/quality/: README.md
docs/screening/: README.md
docs/search/: README.md
docs/utils/: README.md
docs/web/: README.md
docs/worker/: README.md
examples/: queue_basic_example.py  queue_usage_examples.py  queue_usage_simple.py
paper/: README_submission.md  paper.bib  paper.md  pre_submission_checklist.md  supplement.md
react-app/: package.json  postcss.config.js  tailwind.config.js  vite.config.ts
react-app/src/: App.tsx  index.css  main.tsx  router.tsx
src/srp/: __init__.py  worker.py
tests/: __init__.py  test_core.py  test_dedup.py  test_influence.py
tests/integration/: README.md  __init__.py  test_dedup_to_enrich.py  test_end_to_end.py  test_full_pipeline.py  test_io_persistence.py  test_search_queue.py  test_search_to_dedup.py  (+1 more)
(+128 files in other folders)
